--- a/index.html
+++ b/index.html
@@ -1,46 +1,50 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <!-- ios safari處理 -->
-        <meta name="format-detection" content="date=no" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="format-detection" content="address=no" />
-        <meta name="format-detection" content="email=no" />
-        <meta name="open-default-browser" content="true" />
-        <title></title>
-        <meta name="description" content="" />
-        <!-- 社群 -->
-        <meta property="og:title" content="" />
-        <meta property="og:description" content="" />
-        <meta property="og:url" content="" />
-        <meta property="og:image" content="" />
-        <meta property="og:type" content="website" />
-        <!-- code new -->
-        <script language="javascript" src="https://tw.beanfun.com/js/GA_CodeNew.js"></script>
-        <!-- ismobile -->
-        <script src="https://tw.hicdn.beanfun.com/plugins/isMobile/isMobile.min.js"></script>
-        <!-- jquery -->
-        <script src="https://tw.hicdn.beanfun.com/jquery/jquery.min.js"></script>
-        <script src="https://tw.hicdn.beanfun.com/jquery/jquery-migrate.min.js"></script>
-        <!-- loading -->
-        <script src="https://tw.hicdn.beanfun.com/plugins/loadingProgress/loadingProgress.js"></script>
-        <!-- g-box -->
-        <script src="https://tw.hicdn.beanfun.com/beanfun/GamaWWW/allProducts/script/gbox/gbox.js"></script>
-        <!-- vue -->
-        <script src="https://tw.hicdn.beanfun.com/plugins/vuex/3.1.1/vuex.min.js"></script>
-        <script src="https://tw.hicdn.beanfun.com/plugins/vue/2.6.10/vue.js"></script>
-        <!-- axios -->
-        <script src="https://tw.hicdn.beanfun.com/plugins/axios/0.21.1/axios.min.js"></script>
-        <!-- swiper -->
-        <script src="https://tw.hicdn.beanfun.com/plugins/swiper/8.3.2/swiper-bundle.min.js"></script>
-        <!-- H5回首頁鈕 -->
-        <script src="https://tw.hicdn.beanfun.com/beanfun/beanfunApp/H5assets/script/H5_backhome.js"></script>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<!-- ios safari處理 -->
+		<meta name="format-detection" content="date=no" />
+		<meta name="format-detection" content="telephone=no" />
+		<meta name="format-detection" content="address=no" />
+		<meta name="format-detection" content="email=no" />
+		<meta name="open-default-browser" content="true" />
+		<title></title>
+		<meta name="description" content="" />
+		<!-- 社群 -->
+		<meta property="og:title" content="" />
+		<meta property="og:description" content="" />
+		<meta property="og:url" content="" />
+		<meta property="og:image" content="" />
+		<meta property="og:type" content="website" />
 
-        <!-- gtm -->
-        <!-- <script>
+		<link rel="stylesheet" href="https://tw.hicdn.beanfun.com/plugins/nice-select/nice-select.css" />
+		<link rel="stylesheet" href="./assets/css/default.css" />
+		<!-- code new -->
+		<script language="javascript" src="https://tw.beanfun.com/js/GA_CodeNew.js"></script>
+		<!-- ismobile -->
+		<script src="https://tw.hicdn.beanfun.com/plugins/isMobile/isMobile.min.js"></script>
+		<!-- jquery -->
+		<script src="https://tw.hicdn.beanfun.com/jquery/jquery.min.js"></script>
+		<script src="https://tw.hicdn.beanfun.com/jquery/jquery-migrate.min.js"></script>
+		<!-- loading -->
+		<script src="https://tw.hicdn.beanfun.com/plugins/nice-select/nice-select.js"></script>
+		<script src="https://tw.hicdn.beanfun.com/plugins/loadingProgress/loadingProgress.js"></script>
+		<!-- g-box -->
+		<script src="https://tw.hicdn.beanfun.com/beanfun/GamaWWW/allProducts/script/gbox/gbox.js"></script>
+		<!-- vue -->
+		<script src="https://tw.hicdn.beanfun.com/plugins/vuex/3.1.1/vuex.min.js"></script>
+		<script src="https://tw.hicdn.beanfun.com/plugins/vue/2.6.10/vue.js"></script>
+		<!-- axios -->
+		<script src="https://tw.hicdn.beanfun.com/plugins/axios/0.21.1/axios.min.js"></script>
+		<!-- swiper -->
+		<script src="https://tw.hicdn.beanfun.com/plugins/swiper/8.3.2/swiper-bundle.min.js"></script>
+		<!-- H5回首頁鈕 -->
+		<script src="https://tw.hicdn.beanfun.com/beanfun/beanfunApp/H5assets/script/H5_backhome.js"></script>
+
+		<!-- gtm -->
+		<!-- <script>
     (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -52,15 +56,17 @@
         f.parentNode.insertBefore(j, f);
     })(window, document, "script", "dataLayer", "GTM-NSRJ7MD");
 </script> -->
-    </head>
-    <body>
-        <div id="app">
-            <div id="container">
-                <!-- navbar -->
-                <!-- section -->
-                <!-- footer -->
-            </div>
-        </div>
-    </body>
-    <script src="./assets/script/default.js"></script>
+	</head>
+	<body>
+		<div id="app">
+			<div id="container">
+				<navbar></navbar>
+				<front></front>
+				<footerbar></footerbar>
+				<top></top>
+			</div>
+		</div>
+	</body>
+
+	<script type="module" src="./assets/script/default.js"></script>
 </html>
