--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
 		<div id="app">
 			<div id="container">
 				<navbar></navbar>
-				<front></front>
+				<!-- <front></front> -->
+				<!-- <login></login> -->
+				<lottery></lottery>
+				<!-- <gamedata></gamedata> -->
 				<footerbar></footerbar>
 				<top></top>
 			</div>
