--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<meta property="og:image" content="" />
 		<meta property="og:type" content="website" />
 
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+		<link rel="stylesheet" href="https://tw.hicdn.beanfun.com/plugins/swiper/8.3.2/swiper-bundle.min.css" />
 		<link rel="stylesheet" href="https://tw.hicdn.beanfun.com/plugins/nice-select/nice-select.css" />
 		<link rel="stylesheet" href="./assets/css/default.css" />
 		<!-- code new -->
@@ -40,7 +40,7 @@
 		<!-- axios -->
 		<script src="https://tw.hicdn.beanfun.com/plugins/axios/0.21.1/axios.min.js"></script>
 		<!-- swiper -->
-		<!-- <script src="https://tw.hicdn.beanfun.com/plugins/swiper/8.3.2/swiper-bundle.min.js"></script> -->
+		<script src="https://tw.hicdn.beanfun.com/plugins/swiper/8.3.2/swiper-bundle.min.js"></script>
 		<!-- H5回首頁鈕 -->
 		<script src="https://tw.hicdn.beanfun.com/beanfun/beanfunApp/H5assets/script/H5_backhome.js"></script>
 
@@ -64,8 +64,8 @@
 				<navbar></navbar>
 				<!-- <front></front> -->
 				<!-- <login></login> -->
-				<lottery></lottery>
-				<!-- <gamedata></gamedata> -->
+				<!-- <lottery></lottery> -->
+				<gamedata></gamedata>
 				<footerbar></footerbar>
 				<top></top>
 			</div>
