--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<meta property="og:image" content="" />
 		<meta property="og:type" content="website" />
 
+		<link href="https://tw.hicdn.beanfun.com/plugins/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="https://tw.hicdn.beanfun.com/plugins/swiper/8.3.2/swiper-bundle.min.css" />
 		<link rel="stylesheet" href="https://tw.hicdn.beanfun.com/plugins/nice-select/nice-select.css" />
 		<link rel="stylesheet" href="./assets/css/default.css" />
@@ -44,6 +45,8 @@
 		<!-- H5回首頁鈕 -->
 		<script src="https://tw.hicdn.beanfun.com/beanfun/beanfunApp/H5assets/script/H5_backhome.js"></script>
 
+		<script src="https://tw.hicdn.beanfun.com/plugins/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+
 		<!-- gtm -->
 		<!-- <script>
     (function (w, d, s, l, i) {
@@ -64,8 +67,8 @@
 				<navbar></navbar>
 				<!-- <front></front> -->
 				<!-- <login></login> -->
-				<!-- <lottery></lottery> -->
-				<gamedata></gamedata>
+				<lottery></lottery>
+				<!-- <gamedata></gamedata> -->
 				<footerbar></footerbar>
 				<top></top>
 			</div>
