--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 			<div id="container">
 				<navbar></navbar>
 				<!-- <front></front> -->
-				<!-- <login></login> -->
-				<lottery></lottery>
+				<login></login>
+				<!-- <lottery></lottery> -->
 				<!-- <gamedata></gamedata> -->
 				<footerbar></footerbar>
 				<top></top>
