--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 		<div id="app">
 			<div id="container">
 				<navbar></navbar>
-				<!-- <front></front> -->
-				<login></login>
+				<front></front>
+				<!-- <login></login> -->
 				<!-- <lottery></lottery> -->
 				<!-- <gamedata></gamedata> -->
 				<footerbar></footerbar>
