--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 		<div id="app">
 			<div id="container">
 				<navbar></navbar>
-				<front></front>
+				<!-- <front></front> -->
 				<!-- <login></login> -->
 				<!-- <lottery></lottery> -->
-				<!-- <gamedata></gamedata> -->
+				<gamedata></gamedata>
 				<footerbar></footerbar>
 				<top></top>
 			</div>
